@@ -3,22 +3,24 @@ Hash: SHA256
 
 AUX puppetdb.initd 1945 SHA256 7675cf8d7dd3214bdf19e6e0a3180ca745671e81b10684b0ffa2bd429afddaae SHA512 3afa8566e7c5fbbeb866adc9440178e9b87531d76b1778e3950a444f4347fb64d3ef5b2f89f94045e3ae92281d806593ee6c37ca6e7fe31f950bce3b88b5d5fc WHIRLPOOL 572414d84b677d8c941a95558e605eddacedabebd421b91fcd332d5a25f0a99260990a02b52fb6848edd2df1fa9afd3b866601f4aa07a57b9693f7f4542038ca
 DIST puppetdb-3.0.1.tar.gz 24693952 SHA256 b5e86d36845c62d75c078816cffd5d38d97f014da8886506819b21a6c2719366 SHA512 00960de13270a8063de1845f7f0c42a3fa4bdec10ab2b8f66ce0dba27acda1b78974c57c0f3c6e2c09187f63e85d799b94f95de563bcbc179e9d692470a1e902 WHIRLPOOL ec136a91b2712b9249defaff6ea24b6f1ed917e519850515d8c0b995c5dcbc049550b2ac9efbe585c197a5747edcdb10e490a016de2067b593c833e02d8a7426
+DIST puppetdb-3.0.2.tar.gz 24698063 SHA256 976ef25948b206ad9a0abfee1ac8a4e737e87b7d8b26c3af24bc3237d1dd757b SHA512 9bf8ed30f2156bd7e544899d0e135aeaa0a30b3df76245878ce27f3a195bb4a6356a143b65a7ba1bb8c8382e64d1d616131ffe7dbeea15d2d1b5bdd34a93fc8e WHIRLPOOL e55c7405b814ab39e7e58941c3c71ea31f7ebd42bb23de2d98f722a99382f50999fa83105b3d730d49188d137aee1bdf7ed63fc30f8a879809b6e4762ba00873
 EBUILD puppetdb-3.0.1.ebuild 2855 SHA256 76ac880235ed362fc9e6c69e69a20fa3aa3142f3fbb2f149b8e666800587413b SHA512 fd42e497fb610b1945f4c6c33b2ff900097a2a4ae1e48a4c744c479159efb3f4516e5f63fabf26d6e9602bb5a8373f9ae31ed0d7e795043c2e11cacd76ec987d WHIRLPOOL 4f8433935c381ce1c0f78f534fffe6ebd516951ceb4862a4d50b1b080974a769ac71313b05b9a6e32dbd65e56f01ae32577598999719aae75594ca80dfa4df07
-MISC ChangeLog 1117 SHA256 0df19a0884c6ea5b9648ec1bae92a0c32c145e0b900b1741d02f1102a50b4a35 SHA512 e9ce2ed9b839d1e794609aed8f1ea6c556dd8f73eb4a9a88933c4631d2ee9189499c5909e5599665b78e7febab10985e65b3e14861dea8523fa65229231072ba WHIRLPOOL c39f2877b210c5feab9d49b882235d30542648d1d1ae98e29336002252849b9c3d70cc60447889bf10e9f16e483eeba2b398577fca72d025a20903e5b7abffc4
+EBUILD puppetdb-3.0.2.ebuild 2855 SHA256 9ed3b5538b4cf8a5faa858e2003163d27a739940fdc84fa5aea1c3e854ee8275 SHA512 38eef4552907a2fd7ed50d74e22ac921b75cd2adbab304acc0fa7ac4a884ee7e101d4a4a1f6e50193036c48c6c56c415e502554da7023f684e10e910bc044755 WHIRLPOOL 4b33aff7a7756dca364ce5ee8024ea56aefc74373907f6f2a01a94d5fe0af45c86a7daf242b1596cdd9ac8ce89034ec69bd80a828232af999f1b147d14ab0e42
+MISC ChangeLog 1236 SHA256 3fea32c44cd920a4d0afd13b438efb32b9a64e483039d8f4379492a5f9d19b42 SHA512 57021ccb882ac0ee0b534edeed6cf510d3919616289edb066ae561b1db2ee81ebb95903abf45b57c45759a6755edee74c0968630a8296b919a7f393e25a8af01 WHIRLPOOL a4eb6aac2ccbc720cdb5aba6050445a4a33ab5bba4eeee30357fc96208a6a3a21df16f0c9bde06a000d9551d49dc2f9bcabccfe453e884356c0a320b2bd19b0a
 MISC metadata.xml 471 SHA256 dadbeec45a119b1377e968440695bf20e2c71842eff8aabfc682101e75560dd7 SHA512 20492c379725a963a261add53895c794108c2b3832203179befd581c9cc2c7e2dc72a85ded8033601f4fbd0c5ba2e058096b9292435de812bc8823b86ed32074 WHIRLPOOL 1d987b3086bb668f411cf6b4a3e63bbf918f3b2bdb97bcd6d72570a239a4611c4d56ef20a46534c70b4d037578ef09c0bf5e23f8f02569f3b1253e4802a7a7eb
 -----BEGIN PGP SIGNATURE-----
 
-iQIcBAEBCAAGBQJVrIpdAAoJEGSje+quGaTotcoP/1mf4yJOYXSnqtiqPU3H66SA
-kkGLxx+UsZqj79RIEQJHRTq9VPLfC6mqUVhb4PLvxl1HtA2tKbbHY6/+4fxs1YOy
-A3+kBKYcDrfcfGXYhwlQbBhnrH9HSZSNYafKOEIHG15Ky9WgmpOXmXkgUPOgWqz1
-y7El2Af0dAM3KMkvqJ3KlqaKpQqLETDDqmG0cv1wfNJyGiJAIDR7OG9y5jqaakc2
-/Ms+0/l4fufDci9EdAKnnnLjTS6X7df85hH5F3QWHel4SqXBst+IUjGCN5BmjH+B
-p2gqmAAUVjYgwNtM7yEqyVQlrAF1WeURbpsGTpuEy+2DF1arxOnQNF35xvI5CXnE
-qLIauxFVN6noVWhn9jC0Ou4epKTY19j3czkr3p+GVQM2pOp9Y4ap7MNdNbceSq7s
-3ExAvLEanEkFJtJn8BL3qKJlbntWw8Y3fQr2Jh9NUZiK0BfaPBKa0hP/poem8dl6
-eTVjmHgeLnXfhHBqW6O+7JX5cWSJgHJGrqYkCHsjxGP/+u9uIVrdREuYGeqgeiV6
-R1qJo7lsNcY75l1m/reQHkg3dYCjXnNPiyQfzD8lrj6lF/vjo2yU9r6zBZNlB7qy
-ZneLob7irLWSp91chHUasZQxF+WnJcKEZFZfKNjKQ3lZ3onNZA1S7c0ye/0UO/1v
-O+Qd+AVQZwBDRLDl584d
-=/Iz8
+iQIcBAEBCAAGBQJVwrxjAAoJEGSje+quGaToDeoQAIXB2bJXWmIxwiyKhT67dkco
+nF9DGFs564L1g2Bth13Y3Kob2A/HmWrsKQSTdGzONGtBEUIUFL+8KjrNeavmIB2b
+Ew9InxNnqvQdItAYcPwCK/aWJsFyNeC0N+D4gTAro1hgG7UB2TU6emTeii/ZsDJR
+ZRe/tXl4dUVvzQpO3oxtja9EnWkKHxTIso91/cy21moAQsmXIMm5sV0kDxrQu8Wa
+job78W5FQx1KYOTC/JYYONHHiDtTwi9BuL5j6hEM6hqT7SfnLg2oiJUrIqmVu0pv
+Dd8T79OlSl7jT7fuA8GKvTp2ckQt7xnBcnFqOA7VGUvLGYAj3SvyfnIvUBuGfz8X
+qCbywTsMLkqECRx1tkRCXE42sGkHloezlqaO59iDucLZ4a+yRLzCCOoMa8Bwywzc
+thKiOTDfyEQk5mxRpPc+qN+Y4u71NpLTbtA/5BCTqwgeTrwRCtQpSN+GVQTcYjwr
+uBnm6AqkBqV2ncfzb+g6cpgiA2H6rJAMTMh9OEB9e6QCCm8h/K0InsBiaXBclQ/T
+6+Lm636KMN/pGi5Xcsqxic2QiPsLzvUGdCATkRloEMMumMDa7rRaH2QuyTmMVqQQ
+i58et+ZX0QkM4GqqQStltNScuDoz1WP+M5SGO0ZiTP6bOhTcdGOL8iODgPoGlhJS
+VIPFUb7JvEbVLmH7zElL
+=QW4a
 -----END PGP SIGNATURE-----
