@@ -1,26 +1,25 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 DIST bandit-0.12.0.tar.gz 65558 SHA256 3c147b507696f3a74a5cf3581cc3bb65a63df454fcf24db28c3d1baa765a3b04 SHA512 ef1d80f2ca09d427e6d48f983d696fb92eb12184fbdc13dfb170a73c5935f56f7e6bf3b4cf4d211598f884592e6fe2ca33f6d33732cf12e740f74d43ffe78457 WHIRLPOOL 1defd5dcb9d120585b10e72c51501373572e7d56c0e379ec587592fd53a381baf262a970956cd9fa4c2ad007697a1b7db9068d130b6cb3a33a00c40bb9c6a13c
+DIST bandit-0.13.0.tar.gz 73142 SHA256 4593957b236564599dec7c8b2da5b084f9b257213688a3a97b2643c04721eb66 SHA512 1605fb2e3e43a85ccf89a0b18c517082543d20b55149383d3704d71854817cfef3fd5e1095dd58e24efe0324ca9430fc8d7ab9f3e4f1db1ca0ffe7c4f8e17577 WHIRLPOOL 3becc739b966c2ff550988f04b1dbb03b285b120ff1f2bf4822a0b2277bdd2dc23f7e5c4d5ce6ea98dc45211d9ee7ed52f37e602f2d18558eacce356b81f79a5
 EBUILD bandit-0.12.0.ebuild 1596 SHA256 510966e1e6dabef7f8853f279df97bbb7dac2fd379143e697bf0aa6ee25617ed SHA512 1f89e2245c36e4ffe3b09c58f6bfc3e2c492bee5502cbc84e3ad9c9d1b81e4d5226a3ff29a35fc07a9fa2a168e6ac258277c92fb8ec34dd3272637fe5efc943e WHIRLPOOL 5855227875095e76f33834aa9d8842fd5fbf5b42b45226db55063eba5d53af166972544ac54d59515a6f5d6994e49a065dab422cf39ed4cff26dde932470db74
-MISC ChangeLog 383 SHA256 8c70091a0e205223a4a0a04aa72ce89ae37f2c426970fded0cd9f1920a4f6d49 SHA512 9a6aa656fecd8f88f415f6df7b43886814ffab1d366ccfd14c1225ff81b127351ecb218b79fad7d0eb424f9dd241a0423e8889b0de7928f67d30266e7dc92feb WHIRLPOOL 576178f03be090ce4ab4f8b76e3d58a985b71526a4565cfab6f278ea6920d6f5613f82b1043e6dd15689e85b65266e71a192ff63a6aa3d65ebd10d10c39073d1
+EBUILD bandit-0.13.0.ebuild 1596 SHA256 0bc21d9398ce1d705ed9970600328995fbee96cd9b1dd53d00a091e840733b36 SHA512 49b247ee123c9886278a452f2532c240b7405429f55ddbfdd28466cbe952d1308ab37170675729292dec2e05180b27a727fdec3675762ddce2880a9c331196c4 WHIRLPOOL 3a67c56e45d0b29f981bd539e0216b39c7a2706cea60c84ca739f988520ad3f9bfa0ded6d09c47ecc86305505964da5f206475e0620e555c2733fc1892666217
+MISC ChangeLog 500 SHA256 944de843c681563e48c1d83994b1c137fe5a6382e21171148d15fa1c536bc486 SHA512 43381b6ad9bcd72a603a328674c86d4d803a536182c787fc0d44cebc2be8678730c8c1d3c604fa8b545635947bda45a515777dc86a0626931c0c7a441f5e8af4 WHIRLPOOL b4e5c93ea01bfe9f58bbaaf598e75b7534496a64c0388565c3274ef3351cedbe8543e6d50d0de6fd12a9c3b344e0047ce808f57338649db6efe01d36de924736
 MISC metadata.xml 423 SHA256 bce793b644bf2e2f9d1c0ae0f213df466f1dcc4ada00a22a61e550d7089fb966 SHA512 26651b4840acd64f174d679570219afb57cc4b3e26745efd5b4f1ff3d9e4359409e98b49d801ab2d4660034fc60767c856e50e0496ffc51bef6ad7b39b0a8b82 WHIRLPOOL 3d3093785cb4d3514ea7b403f78420a8c038746e4e56be23a6524bf17c5e9f886555bfc5abcf153c713da149ead5c57ac840bbad0108c8016ca75200c09ed7fe
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.1
 
-iQJ8BAEBCgBmBQJVwJDJXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0QUU0N0I4NzFERUI0MTJFN0EyODE0NUFF
-OTQwMkE3OUIwMzUyOUEyAAoJEOlAKnmwNSmifJcP/2BKdiqJLVrOCRQQ2Yh5BJtl
-o4camb6os2ITOTwQTFVck1CshlEnxq3SPSycG50eZVlU9fDvhmu3jnTvc/r5F1V9
-r4sKRDeLS6weXOaf+i7RaVdaNzIEj2ZrG5t9VwFkw3vyJ69l4kiCML+CA6HYtilE
-A84rCVugQvbcKTG5KBgQ4uE8EyjzV4lsZCqcRa0xVOzwHMfn39awehNQxPlxC9Fa
-+5NOg/PEFfBzDEf6krQNfHCtflvuR9v3e1jLxSiToCTG4Kr7evwznsFEr764PtZz
-XrLQsyzztF4UQbK/3zsQMv80HqgMbiuybk79MTxh39QdD5X5VW4aenyhmYJCDPic
-UfHBnWLRxXXI1f7EPH1WyQ+Ad64jBnh7WlB08aTFxCsCnaVnRHazRIDuHywh6zfx
-F42L23bpzUJ+9HLWjL3O7P++89asGL0//qlGjcuQcLkaHgLEDFc3N7eB95bn+m67
-GRHoxvIZuyna4E5BdYjVukIhDrBV/K/31ZgWeF75HcG+uhNnuyNh8sWnUy4cscDI
-mVi3mlbgkXUFl5aYeMhqHK7hdauHG9YLdDf1wJ1IzJ66IMfIqTNN4qxCxvIm6krr
-AM3CjWbuFjrROOVtt/R0aNXm6kmUZJDf5vzasfa7ZM3CPJdJTFafOl03kr8LX33l
-kieDgoEAXHJ2h/b669W/
-=b8Zq
+iQIcBAEBCAAGBQJVwrz2AAoJEGSje+quGaToo6AP/1eeI7ufmDLfBaccDeiw/ekN
+jxqSDYuPGmSUEMQiKe3cvbJNxNRKMEGvFuSs7Mutxq7ZK2rmSuQDQNMchLY0+80J
+qz/UBITEcIc9GjLM+mUD8aD/AXld5v5ThTlFVwwuRpVDuYujLIH4ZoHfoHTIaSah
+Bsz/kOLbMvvDyHQe8QDpg1QPBYmtivMr8jQ37CuSUz15OfI9CP1Lz1lMR9bFAWqC
+iwQI5Tc2smSnMs1bkArxzsxJJLB3gDaHFEd27fjVcurljbLhxt9F+P1N9cc+K/0Y
+eRvsadblABTdvv2FSmz3hnQZ3ccS+2YQGvmKHZ6lvIrZqe0OlLjqvsKgeziaAtSB
+TTrtgHhG01jLJEt4NTlnpnNuo+IXLX1Sexl8WZQILETyRmm57zDQsQypL0b6+1C5
+4nK69R1KWHJOLYgam4uKD/CC9W5pRHmSgsZt8pc/r4XQG7MIGC0EA3/LvNFuDUMa
+3tfTvLbqPEZfWoRQhvNWn7LGxByyzXzL24rzhY2OYDZ6GGQJ9I7CxjagH1Cq2E1C
+oxUjRYUv3nHGdYvYt34OZgzjKB0XzCO0PHuPfF+yFtGmKe0v6VxWFWAF/rGRCyw8
+UXwT2PNDo8IgtHEqvcyB3MlCm930SngfdBRSYDTxQ12/x6gP+e5ToDoGG6mwanfk
+pdAOqsjhdEg+RNDXHUEE
+=whS1
 -----END PGP SIGNATURE-----
