@@ -1,0 +1,12 @@
+DEFINED_PHASES=compile install postinst prepare setup
+DEPEND=virtual/pkgconfig
+DESCRIPTION=PuppetDB collects data generated by Puppet.
+EAPI=5
+HOMEPAGE=http://docs.puppetlabs.com/puppetdb/
+KEYWORDS=~amd64 ~x86
+LICENSE=Apache-2.0
+RDEPEND=>=virtual/jdk-1.7.0
+SLOT=0
+SRC_URI=https://downloads.puppetlabs.com/puppetdb/puppetdb-3.0.2.tar.gz
+_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	62927b3db3a589b0806255f3a002d5d3	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	42408102d713fbad60ca21349865edb4	user	f54e098dd38ba1c0847a13e685b87747
+_md5_=52d38438d293d234a6ab3a047735dec7
