@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/bandit
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/bandit/ChangeLog,v 1.1 2015/07/31 01:15:51 prometheanfire Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/bandit/ChangeLog,v 1.2 2015/08/06 01:47:22 prometheanfire Exp $
+
+*bandit-0.13.0 (06 Aug 2015)
+
+  06 Aug 2015; Matthew Thode <prometheanfire@gentoo.org> +bandit-0.13.0.ebuild:
+  bup
 
 *bandit-0.12.0 (31 Jul 2015)
 
